240118 수정 장바구니 select 까지

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ################# DATABASE \uC124\uC815
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shopping_db
-spring.datasource.username=root
+spring.datasource.username=webuser
 spring.datasource.password=1234
 ################# HIKARI \uC124\uC815
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
