--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,8 @@ spring.servlet.multipart.max-request-size=60MB
 spring.mail.host=smtp.naver.com
 spring.mail.port=587
 spring.mail.protocol=smtp
-spring.mail.username=jaeho9859@naver.com
-spring.mail.password=fkdlxk12
+spring.mail.username=*******@naver.com
+spring.mail.password=********
 spring.mail.properties.mail.smpt.starttls.enable=true
 spring.mail.properties.mail.smpt.starttls.auth=true
 
